K8S/prometheus-cluster/alertmanager-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "monitoring"
  name: "alertmanager-deploy"
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app.kubernetes.io/name: "alertmanager"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "alertmanager"
    spec:
      volumes:
        - name: "alertmanager-config"
          configMap:
            name: "alertmanager-config"
        - name: "alertmanager-storage"
          persistentVolumeClaim:
            claimName: "alertmanager-pvc"
      containers:
        - name: "alertmanager"
          image: "prom/alertmanager:v0.24.0"
          args:
            - "--config.file=/etc/alertmanager/alertmanager.yml"
            - "--storage.path=/alertmanager"
          volumeMounts:
            - name: "alertmanager-config"
              mountPath: "/etc/alertmanager"
            - name: "alertmanager-storage"
              mountPath: "/alertmanager"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 9093
          resources:
            limits:
              cpu: "10m"
              memory: "60Mi"
            requests:
              cpu: "10m"
              memory: "60Mi"
          livenessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/-/healthy"
              port: 9093
          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/-/ready"
              port: 9093
