K8S/prometheus-cluster/blackbox-exporter-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "monitoring"
  name: "blackbox-deploy"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "blackbox-exporter"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "blackbox-exporter"
    spec:
      volumes:
        - name: "blackbox-config"
          configMap:
            name: "blackbox-config"
      containers:
        - name: "blackbox-exporter"
          image: "prom/blackbox-exporter:v0.22.0"
          volumeMounts:
            - name: "blackbox-config"
              mountPath: "/etc/blackbox_exporter"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 9115
          resources:
            limits:
              cpu: "10m"
              memory: "40Mi"
            requests:
              cpu: "10m"
              memory: "40Mi"
