K8S/prometheus-cluster/cadvisor-exporter-daemon.yml
apiVersion: apps/v1
kind: "DaemonSet"
metadata:
  namespace: "monitoring"
  name: "cadvisor-daemon"
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "cadvisor-exporter"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "cadvisor-exporter"
    spec:
      terminationGracePeriodSeconds: 30
      hostNetwork: true
      volumes:
        - name: "root"
          hostPath:
            path: "/"
        - name: "containerd"
          hostPath:
            path: "/var/run/k3s/containerd"
        - name: "sys"
          hostPath:
            path: "/sys"
        - name: "disk"
          hostPath:
            path: "/dev/disk"
      containers:
        - name: "cadvisor"
          image: "gcr.io/cadvisor/cadvisor:v0.45.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--allow_dynamic_housekeeping=true"
            - "--global_housekeeping_interval=30s"
            - "--max_housekeeping_interval=35s"
            - "--housekeeping_interval=30s"
            - "--storage_duration=1m0s"
            - "--docker_only=true"
            - "--port=8085"
          volumeMounts:
            - name: "root"
              mountPath: "/rootfs"
              readOnly: true
            - name: "containerd"
              mountPath: "/var/run/containerd"
              readOnly: true
            - name: "sys"
              mountPath: "/sys"
              readOnly: true
            - name: "disk"
              mountPath: "/dev/disk"
              readOnly: true
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 8085
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: "/healthz"
              port: 8085
