K8S/prometheus-cluster/grafana-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "monitoring"
  name: "grafana-deploy"
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app.kubernetes.io/name: "grafana"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "grafana"
    spec:
      volumes:
        - name: "grafana-storage"
          persistentVolumeClaim:
            claimName: "grafana-pvc"
        - name: "grafana-datasources"
          configMap:
            name: "grafana-datasources"
      containers:
        - name: "grafana"
          image: "grafana/grafana:9.1.6"
          volumeMounts:
            - name: "grafana-storage"
              mountPath: "/var/lib/grafana"
            - name: "grafana-datasources"
              mountPath: "/etc/grafana/provisioning/datasources"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 3000
          resources:
            limits:
              cpu: "50m"
              memory: "150Mi"
            requests:
              cpu: "50m"
              memory: "150Mi"
          livenessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/healthz"
              port: 3000
          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/"
              port: 3000
