K8S/prometheus-cluster/kube-state-metrics-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "prometheus-cluster"
  name: "kube-state-metrics"
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "kube-state-metrics"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "kube-state-metrics"
    spec:
      automountServiceAccountToken: true
      serviceAccountName: "prom-ksm-sa"
      containers:
        - name: "kube-state-metrics"
          image: "registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.6.0"
          ports:
            - name: "http-metrics"
              protocol: "TCP"
              containerPort: 8080
            - name: "telemetry"
              protocol: "TCP"
              containerPort: 8081
          livenessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/healthz"
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/"
              port: 8081
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 65534
            capabilities:
              drop: ["ALL"]
