K8S/prometheus-cluster/node-exporter-daemon.yml
apiVersion: "apps/v1"
kind: "DaemonSet"
metadata:
  namespace: "prometheus-cluster"
  name: "node-exporter-daemon"
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "node-exporter"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "node-exporter"
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      volumes:
        - name: "rootfs"
          hostPath:
            path: "/"
      containers:
        - name: "node-exporter"
          image: "prom/node-exporter:v1.4.0"
          args:
            - "--path.rootfs=/rootfs"
            - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($|/)"'
          volumeMounts:
            - name: "rootfs"
              mountPath: "/rootfs"
              readOnly: true
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 9100
          securityContext:
            privileged: true
