K8S/prometheus-cluster/prometheus-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "monitoring"
  name: "prometheus-deploy"
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app.kubernetes.io/name: "prometheus"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "prometheus"
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: "prometheus-sa"
      volumes:
        - name: "prometheus-config"
          configMap:
            name: "prometheus-config"
        - name: "prometheus-storage"
          persistentVolumeClaim:
            claimName: "prometheus-pvc"
      containers:
        - name: "prometheus"
          image: "prom/prometheus:v2.38.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--web.enable-remote-write-receiver"
            - "--web.enable-lifecycle"
            - "--storage.tsdb.path=/prometheus"
            - "--config.file=/etc/prometheus/prometheus.yml"
          volumeMounts:
            - name: "prometheus-config"
              mountPath: "/etc/prometheus"
            - name: "prometheus-storage"
              mountPath: "/prometheus"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 9090
          resources:
            limits:
              cpu: "200m"
              memory: "1000Mi"
            requests:
              cpu: "200m"
              memory: "1000Mi"
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: "/-/healthy"
              port: 9090
          readinessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: "/-/ready"
              port: 9090
