K8S/prometheus-cluster/alertmanager-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "alertmanager"
spec:
  selector:
    app.kubernetes.io/name: "alertmanager"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 9093
      targetPort: 9093
