K8S/prometheus-cluster/blackbox-exporter-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "blackbox"
spec:
  selector:
    app.kubernetes.io/name: "blackbox-exporter"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 9115
      targetPort: 9115
