K8S/prometheus-cluster/cadvisor-exporter-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "cadvisor-exporter"
spec:
  selector:
    app.kubernetes.io/name: "cadvisor-exporter"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 8085
      targetPort: 8085
