K8S/prometheus-cluster/grafana-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "grafana"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "grafana"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 3000
      targetPort: 3000
