K8S/prometheus-cluster/kube-state-metrics-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "kube-state-metrics"
spec:
  selector:
    app.kubernetes.io/name: "kube-state-metrics"
  ports:
    - name: "http-metrics"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
    - name: "telemetry"
      protocol: "TCP"
      port: 8081
      targetPort: 8081
