K8S/prometheus-cluster/mon-alertmanager-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "prometheus-cluster"
  name: "alertmanager-deploy"
  labels:
    app: "alertmanager"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "alertmanager"
  template:
    metadata:
      labels:
        app: "alertmanager"
    spec:
      volumes:
        - name: "alertmanager-config"
          configMap:
            name: "alertmanager-config"

        - name: "alertmanager-storage"
          persistentVolumeClaim:
            claimName: "alertmanager-pvc"

      containers:
        - name: "alertmanager"
          image: "prom/alertmanager:v0.24.0"
          args:
            - "--config.file=/etc/alertmanager/alertmanager.yml"
            - "--storage.path=/alertmanager"
          ports:
            - containerPort: 9093
          volumeMounts:
            - name: "alertmanager-config"
              mountPath: "/etc/alertmanager"
            - name: "alertmanager-storage"
              mountPath: "/alertmanager"

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "alertmanager"

spec:
  selector:
    app: "alertmanager"
  type: "LoadBalancer"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 9093
      targetPort: 9093
