K8S/prometheus-cluster/mon-blackbox-exporter.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "prometheus-cluster"
  name: "blackbox-deploy"
  labels:
    app: "blackbox"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "blackbox"
  template:
    metadata:
      labels:
        app: "blackbox"
    spec:
      volumes:
        - name: "blackbox-config"
          configMap:
            name: "blackbox-config"

      containers:
        - name: "blackbox-exporter"
          image: "prom/blackbox-exporter:v0.22.0"
          ports:
            - containerPort: 9115
          volumeMounts:
            - name: "blackbox-config"
              mountPath: "/etc/blackbox_exporter"

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "blackbox"

spec:
  selector:
    app: "blackbox"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 9115
      targetPort: 9115
