K8S/prometheus-cluster/mon-cadvisor-exporter.yml
apiVersion: apps/v1
kind: "DaemonSet"
metadata:
  namespace: "prometheus-cluster"
  name: "cadvisor-daemon"
  annotations:
      seccomp.security.alpha.kubernetes.io/pod: "docker/default"
spec:
  selector:
    matchLabels:
      name: "cadvisor"
  template:
    metadata:
      labels:
        name: "cadvisor"
    spec:
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      serviceAccountName: "cadvisor-sa"

      volumes:
        - name: "rootfs"
          hostPath:
            path: "/"
        - name: "var-run"
          hostPath:
            path: "/var/run"
        - name: "sys"
          hostPath:
            path: "/sys"
        # - name: "docker"
        #   hostPath:
        #     path: "/var/lib/docker"
        - name: "disk"
          hostPath:
            path: "/dev/disk"

      containers:
        - name: "cadvisor"
          image: "gcr.io/cadvisor/cadvisor:v0.45.0"
          volumeMounts:
            - name: "rootfs"
              mountPath: "/rootfs"
              readOnly: true
            - name: "var-run"
              mountPath: "/var/run"
              readOnly: true
            - name: "sys"
              mountPath: "/sys"
              readOnly: true
            # - name: "docker"
            #   mountPath: "/var/lib/docker"
            #   readOnly: true
            - name: "disk"
              mountPath: "/dev/disk"
              readOnly: true
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 8080

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "cadvisor"

spec:
  selector:
    name: "cadvisor"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
