K8S/prometheus-cluster/mon-kube-state-metrics.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "kube-state-metrics"
  namespace: "prometheus-cluster"
  labels:
    app: "kube-state-metrics"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "kube-state-metrics"
  template:
    metadata:
      labels:
        app: "kube-state-metrics"
      annotations:
        prometheus.io/scrape: "true"
    spec:
      automountServiceAccountToken: true
      serviceAccountName: "prom-ksm-sa"

      containers:
        - name: "kube-state-metrics"
          image: "registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.6.0"
          ports:
            - name: "http-metrics"
              containerPort: 8080
            - name: "telemetry"
              containerPort: 8081

          livenessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/healthz"
              port: 8080

          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: "/"
              port: 8081

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 65534
            capabilities:
              drop: ["ALL"]

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "kube-state-metrics"

spec:
  selector:
    app: "kube-state-metrics"
  ports:
    - name: "http-metrics"
      protocol: "TCP"
      port: 8080
      targetPort: 8080

    - name: "telemetry"
      protocol: "TCP"
      port: 8081
      targetPort: 8081
