K8S/prometheus-cluster/mon-node-exporter.yml
apiVersion: "apps/v1"
kind: "DaemonSet"
metadata:
  namespace: "prometheus-cluster"
  name: "node-exporter"
  labels:
    app: "node-exporter"

spec:
  selector:
    matchLabels:
      app: "node-exporter"
  template:
    metadata:
      labels:
        app: "node-exporter"
      annotations:
         prometheus.io/scrape: "true"
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true

      volumes:
        - name: "proc"
          hostPath:
            path: "/proc"
        - name: "dev"
          hostPath:
            path: "/dev"
        - name: "sys"
          hostPath:
            path: "/sys"
        - name: "rootfs"
          hostPath:
            path: "/"

      containers:
        - name: "node-exporter"
          securityContext:
            privileged: true
          image: "prom/node-exporter:v1.3.1"
          args:
            - "--path.procfs=/host/proc"
            - "--path.sysfs=/host/sys"
            - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($|/)"'
          ports:
            - containerPort: 9100
          volumeMounts:
            - name: "dev"
              mountPath: "/host/dev"
            - name: "proc"
              mountPath: "/host/proc"
            - name: "sys"
              mountPath: "/host/sys"
            - name: "rootfs"
              mountPath: "/rootfs"

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "node-exporter"

spec:
  selector:
    app: "node-exporter"
  ports:
  - name: "http"
    protocol: "TCP"
    port: 9100
    targetPort: 9100
