K8S/prometheus-cluster/mon-prometheus-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "prometheus-cluster"
  name: "prometheus-deploy"
  labels:
    app: "prometheus"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "prometheus"
  template:
    metadata:
      labels:
        app: "prometheus"
    spec:
      automountServiceAccountToken: true
      serviceAccountName: "prometheus-sa"

      volumes:
        - name: "prometheus-config"
          configMap:
            name: "prometheus-config"

        - name: "prometheus-storage"
          persistentVolumeClaim:
            claimName: "prometheus-pvc"

      containers:
        - name: "prometheus"
          image: "prom/prometheus:v2.38.0"
          args:
            - "--web.enable-remote-write-receiver"
            - "--web.enable-lifecycle"
            - "--storage.tsdb.path=/prometheus"
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: "prometheus-config"
              mountPath: "/etc/prometheus"
            - name: "prometheus-storage"
              mountPath: "/prometheus"

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "prometheus"

spec:
  selector:
    app: "prometheus"
  type: "LoadBalancer"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 9090
      targetPort: 9090
