K8S/prometheus-cluster/node-exporter-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "node-exporter"
spec:
  selector:
    app.kubernetes.io/name: "node-exporter"
  ports:
  - name: "http"
    protocol: "TCP"
    port: 9100
    targetPort: 9100
