K8S/prometheus-cluster/prometheus-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "prometheus-cluster"
  name: "prometheus"
spec:
  selector:
    app.kubernetes.io/name: "prometheus"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 9090
      targetPort: 9090
